<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GigigoApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="option_one">Hot</string>
    <string name="option_two">Top</string>
    <string name="option_three">User</string>
    <string name="ctn_image_grid">Gallery Image</string>
    <string name="dialog_ok">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_title">Seleccione</string>
    <string name="action_list">View as list</string>

    <array name="dialog_option">
        <item>Excluir resultados virales</item>
    </array>

    <string name="window">Window</string>
    <string name="sort">Sort</string>

    <!-- Label for the Window preference [CHAR LIMIT=30] -->
    <string name="pref_window_label">Window</string>

    <!-- Key name for storing window in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_window_key" translatable="false">window</string>

    <!-- Default value for window preference [CHAR LIMIT=NONE] -->
    <string name="pref_window_default" translatable="false">day</string>

    <string-array name="pref_list_window">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>All</item>
    </string-array>
    <string-array name="pref_list_value_window">
        <item>day</item>
        <item>week</item>
        <item>month</item>
        <item>year</item>
        <item>all</item>
    </string-array>

    <!-- Label for the Sort preference [CHAR LIMIT=30] -->
    <string name="pref_sort_label">Sort</string>

    <!-- Key name for Sort window in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_sort_key" translatable="false">sort</string>

    <!-- Default value for Sort preference [CHAR LIMIT=NONE] -->
    <string name="pref_sort_default" translatable="false">viral</string>

    <string-array name="pref_list_sort">
        <item>Viral</item>
        <item>Top</item>
        <item>Time</item>
        <item>Rising</item>
    </string-array>
    <string-array name="pref_list_value_sort">
        <item>viral</item>
        <item>top</item>
        <item>time</item>
        <item>rising</item>
    </string-array>

    <string name="server_status">server-status</string>
    <string name="no_internet">No hay conexión a internet</string>
    <string name="query_fail">Ha ocurrido un error en el Servidor, intentalo más tarde :(</string>
    <string name="viral_pref">viral_pref</string>
    <string name="title_activity_acerca_de">Acerca De</string>

    <!-- Pantalla Acerca De -->
    <string name="datos_desarrollador">Datos del desarrollador</string>
    <string name="developer_name">Elizabeth Guillen</string>
    <string name="tiempo_desarrollo_title">Tiempo de Desarrollo</string>
    <string name="tiempo_desarrollo">10 horas</string>
    <string name="version_desarrollo_title">Versión</string>
    <string name="developer_email">elitzel20@gmail.com</string>
    <string name="developer_hobbies">Kickboxing\nFutbol\nHistoriade México</string>
    <string name="subject_email">Soporte de la app</string>
    <string name="title_activity_details">Details</string>
    <string name="version">1</string>

    <!--Details Activity-->
    <string name="title_ups">UpVotes</string>
    <string name="title_down">DownVotes</string>
    <string name="title_score">Score</string>
    <string name="desc_null">Sin Descripción</string>
    <string name="title_desc">Descripción</string>

</resources>
